Updated models to allow for nf parameterization

--- a/diffpair/sizing_diffpair.ipynb
+++ b/diffpair/sizing_diffpair.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "ft     1.719253e+10  9.922699e+09  1.661072e+09"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -190,13 +190,18 @@
     "%%writefile ./sizing_diffpair.spice\n",
     "** differential pair sizing example\n",
     "\n",
-    ".lib /foss/pdks/gf180mcuD/libs.tech/ngspice/sm141064.ngspice typical\n",
-    ".inc /foss/pdks/gf180mcuD/libs.tech/ngspice/design.ngspice\n",
+    "*.lib /foss/pdks/gf180mcuD/libs.tech/ngspice/sm141064.ngspice typical\n",
+    "*.inc /foss/pdks/gf180mcuD/libs.tech/ngspice/design.ngspice\n",
+    "\n",
+    "* updated models that allow finger parameterization\n",
+    ".lib ../models_updated_2025.07.19/ngspice/sm141064.ngspice typical\n",
+    ".inc ../models_updated_2025.07.19/ngspice/design.ngspice\n",
+    "\n",
     ".param lx=0.28e-6 wx=146e-6 nfx=30, idx=1e-3\n",
     "\n",
-    "XM1a d g s 0 nfet_03v3 L={lx} W={wx} nf=30 ad='int((nf+1)/2) * W/nf * 0.18u' as='int((nf+2)/2) * W/nf * 0.18u' pd='2*int((nf+1)/2) * (W/nf + 0.18u)'\n",
+    "XM1a d g s 0 nfet_03v3 L={lx} W={wx} nf={nfx} ad='int((nf+1)/2) * W/nf * 0.18u' as='int((nf+2)/2) * W/nf * 0.18u' pd='2*int((nf+1)/2) * (W/nf + 0.18u)'\n",
     "+ ps='2*int((nf+2)/2) * (W/nf + 0.18u)' nrd='0.18u / W' nrs='0.18u / W' sa=0 sb=0 sd=0 m=1\n",
-    "XM1b d g s 0 nfet_03v3 L={lx} W={wx} nf=30 ad='int((nf+1)/2) * W/nf * 0.18u' as='int((nf+2)/2) * W/nf * 0.18u' pd='2*int((nf+1)/2) * (W/nf + 0.18u)'\n",
+    "XM1b d g s 0 nfet_03v3 L={lx} W={wx} nf={nfx} ad='int((nf+1)/2) * W/nf * 0.18u' as='int((nf+2)/2) * W/nf * 0.18u' pd='2*int((nf+1)/2) * (W/nf + 0.18u)'\n",
     "+ ps='2*int((nf+2)/2) * (W/nf + 0.18u)' nrd='0.18u / W' nrs='0.18u / W' sa=0 sb=0 sd=0 m=1\n",
     "vg  g  0  1\n",
     "vd  d  0  2\n",
@@ -221,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +234,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Note: Compatibility modes selected: hs a\n",
+      "Note: Compatibility modes selected: hs\n",
       "\n",
       "Warning: m=xx on .subckt line will override multiplier m hierarchy!\n",
       "\n",
@@ -243,9 +248,9 @@
       "No. of Data Rows : 1\n",
       " BSIM4v5: Berkeley Short Channel IGFET Model-4\n",
       "     device             m.xm1b.m0             m.xm1a.m0\n",
-      "      model          nfet_03v3.12          nfet_03v3.12\n",
+      "      model           nfet_03v3.8           nfet_03v3.8\n",
       "          l               2.8e-07               2.8e-07\n",
-      "          w               0.00146               0.00146\n",
+      "          w              0.000146              0.000146\n",
       "          m                     1                     1\n",
       "         nf                    30                    30\n",
       "         sa                     0                     0\n",
@@ -256,19 +261,19 @@
       "        scc                     0                     0\n",
       "         sc                     0                     0\n",
       "        min                     0                     0\n",
-      "         ad             1.314e-10             1.314e-10\n",
-      "         as            1.4016e-10            1.4016e-10\n",
-      "         pd             0.0014654             0.0014654\n",
-      "         ps            0.00156309            0.00156309\n",
-      "        nrd           0.000123288           0.000123288\n",
-      "        nrs           0.000123288           0.000123288\n",
+      "         ad             1.314e-11             1.314e-11\n",
+      "         as            1.4016e-11            1.4016e-11\n",
+      "         pd             0.0001514             0.0001514\n",
+      "         ps           0.000161493           0.000161493\n",
+      "        nrd            0.00123288            0.00123288\n",
+      "        nrs            0.00123288            0.00123288\n",
       "        off                     0                     0\n",
       "       rbdb                    50                    50\n",
       "       rbsb                    50                    50\n",
       "       rbpb                    50                    50\n",
       "       rbps                    50                    50\n",
       "       rbpd                    50                    50\n",
-      "     delvto                    -0                    -0\n",
+      "     delvto                    -0                     0\n",
       "      mulu0                     1                     1\n",
       "        xgw                     0                     0\n",
       "      ngcon                     1                     1\n",
@@ -278,59 +283,59 @@
       "   rgatemod                     0                     0\n",
       "     geomod                     0                     0\n",
       "    rgeomod                     0                     0\n",
-      "       gmbs            0.00320428            0.00320428\n",
-      "         gm             0.0190759             0.0190759\n",
-      "        gds           0.000679235           0.000679235\n",
-      "      vdsat             0.0682339             0.0682339\n",
-      "        vth                0.6895                0.6895\n",
+      "       gmbs            0.00182948            0.00182948\n",
+      "         gm             0.0099833             0.0099833\n",
+      "        gds           0.000349294           0.000349294\n",
+      "      vdsat                0.1489                0.1489\n",
+      "        vth              0.664037              0.664037\n",
       "         id                 0.001                 0.001\n",
-      "        ibd          -2.00004e-12          -2.00004e-12\n",
-      "        ibs          -3.61225e-13          -3.61225e-13\n",
+      "        ibd                -2e-12                -2e-12\n",
+      "        ibs          -2.25845e-13          -2.25845e-13\n",
       "        gbd                 1e-12                 1e-12\n",
       "        gbs                 1e-12                 1e-12\n",
-      "       isub           1.40044e-08           1.40044e-08\n",
-      "      igidl           5.76161e-50           5.76161e-50\n",
+      "       isub           2.36128e-08           2.36128e-08\n",
+      "      igidl           5.80973e-51           5.80973e-51\n",
       "      igisl                     0                     0\n",
       "        igs                     0                     0\n",
       "        igd                     0                     0\n",
       "        igb                     0                     0\n",
       "       igcs                     0                     0\n",
       "       igcd                     0                     0\n",
-      "        vbs              -0.36115              -0.36115\n",
-      "        vgs               0.63885               0.63885\n",
-      "        vds               1.63885               1.63885\n",
-      "        cgg            7.2881e-13            7.2881e-13\n",
-      "        cgs          -5.26904e-13          -5.26904e-13\n",
-      "        cgd           1.09771e-14           1.09771e-14\n",
-      "        cbg          -1.98446e-13          -1.98446e-13\n",
-      "        cbd           2.21689e-15           2.21689e-15\n",
-      "        cbs          -1.09471e-13          -1.09471e-13\n",
-      "        cdg          -2.12182e-13          -2.12182e-13\n",
-      "        cdd          -5.26975e-15          -5.26975e-15\n",
-      "        cds           2.54585e-13           2.54585e-13\n",
-      "        csg          -3.18182e-13          -3.18182e-13\n",
-      "        csd          -7.92423e-15          -7.92423e-15\n",
-      "        css            3.8179e-13            3.8179e-13\n",
-      "        cgb          -2.12883e-13          -2.12883e-13\n",
-      "        cdb          -3.71334e-14          -3.71334e-14\n",
-      "        csb          -5.56834e-14          -5.56834e-14\n",
-      "        cbb             3.057e-13             3.057e-13\n",
-      "      capbd           6.60063e-13           6.60063e-13\n",
-      "      capbs           9.06426e-13           9.06426e-13\n",
-      "         qg           9.09201e-13           9.09201e-13\n",
-      "         qb          -7.97577e-13          -7.97577e-13\n",
-      "         qd          -4.46566e-14          -4.46566e-14\n",
-      "         qs          -6.69674e-14          -6.69674e-14\n",
-      "       qinv           1.86898e-14           1.86898e-14\n",
+      "        vbs             -0.225836             -0.225836\n",
+      "        vgs              0.774164              0.774164\n",
+      "        vds               1.77416               1.77416\n",
+      "        cgg           1.10452e-13           1.10452e-13\n",
+      "        cgs          -8.76745e-14          -8.76745e-14\n",
+      "        cgd            1.7256e-15            1.7256e-15\n",
+      "        cbg          -2.12785e-14          -2.12785e-14\n",
+      "        cbd           3.86022e-16           3.86022e-16\n",
+      "        cbs          -2.00203e-14          -2.00203e-14\n",
+      "        cdg          -3.56752e-14          -3.56752e-14\n",
+      "        cdd          -8.43089e-16          -8.43089e-16\n",
+      "        cds           4.30835e-14           4.30835e-14\n",
+      "        csg          -5.34979e-14          -5.34979e-14\n",
+      "        csd          -1.26854e-15          -1.26854e-15\n",
+      "        css           6.46113e-14           6.46113e-14\n",
+      "        cgb          -2.45028e-14          -2.45028e-14\n",
+      "        cdb          -6.56519e-15          -6.56519e-15\n",
+      "        csb          -9.84489e-15          -9.84489e-15\n",
+      "        cbb           4.09128e-14           4.09128e-14\n",
+      "      capbd           6.66792e-14           6.66792e-14\n",
+      "      capbs           9.52885e-14           9.52885e-14\n",
+      "         qg           1.23962e-13           1.23962e-13\n",
+      "         qb          -9.91401e-14          -9.91401e-14\n",
+      "         qd          -9.93014e-15          -9.93014e-15\n",
+      "         qs          -1.48917e-14          -1.48917e-14\n",
+      "       qinv           1.35848e-14           1.35848e-14\n",
       "       qdef                     0                     0\n",
       "       gcrg                     0                     0\n",
       "       gtau                     0                     0\n",
-      "    vgsteff             0.0209124             0.0209124\n",
-      "     vdseff             0.0675887             0.0675887\n",
-      "       cgso           4.81298e-13           4.81298e-13\n",
-      "       cgdo           3.90358e-13           3.90358e-13\n",
-      "       cgbo               6.6e-19               6.6e-19\n",
-      "       weff           4.86467e-05           4.86467e-05\n",
+      "    vgsteff               0.11937               0.11937\n",
+      "     vdseff               0.14754               0.14754\n",
+      "       cgso           2.91692e-14           2.91692e-14\n",
+      "       cgdo           2.00558e-14           2.00558e-14\n",
+      "       cgbo               8.4e-19               8.4e-19\n",
+      "       weff           4.84667e-06           4.84667e-06\n",
       "       leff               2.8e-07               2.8e-07\n",
       "\n",
       " Isource: Independent current source\n",
@@ -346,8 +351,8 @@
       "         am         -\n",
       "    trnoise         -\n",
       "   trrandom         -\n",
-      "          v             -0.361149\n",
-      "          p           0.000722299\n",
+      "          v             -0.225827\n",
+      "          p           0.000451655\n",
       "    current                 0.002\n",
       "\n",
       " Vsource: Independent voltage source\n",
@@ -367,13 +372,13 @@
       "        pwr                     0                     0\n",
       "       freq                     0                     0\n",
       "      phase                     0                     0\n",
-      "          i           -0.00200003                     0\n",
-      "          p           -0.00400006                     0\n",
+      "          i           -0.00200005                     0\n",
+      "          p           -0.00400009                     0\n",
       "\n",
-      "@m.xm1a.m0[gm] = 1.907589e-02\n",
-      "@m.xm1a.m0[cgg] = 7.288096e-13\n",
-      "@m.xm1a.m0[cgso] = 4.812982e-13\n",
-      "@m.xm1a.m0[cgdo] = 3.903579e-13\n",
+      "@m.xm1a.m0[gm] = 9.983304e-03\n",
+      "@m.xm1a.m0[cgg] = 1.104517e-13\n",
+      "@m.xm1a.m0[cgso] = 2.916925e-14\n",
+      "@m.xm1a.m0[cgdo] = 2.005581e-14\n",
       "Note: Simulation executed from .control section \n"
      ]
     }
